# ponderada-labirinto

./: .gitignore  README.md
install/: local_setup.sh  setup.sh
install/cg/share/cg/: package.sh
install/cg_interfaces/share/cg_interfaces/: package.sh
install/cg_interfaces/share/cg_interfaces/cmake/: cg_interfaces__rosidl_typesupport_cExport.cmake  cg_interfaces__rosidl_typesupport_cppExport.cmake  export_cg_interfaces__rosidl_generator_cppExport.cmake  export_cg_interfaces__rosidl_generator_pyExport.cmake  export_cg_interfaces__rosidl_typesupport_fastrtps_cppExport.cmake
install/cg_teleop/lib/cg_teleop/: teleop_keyboard
install/cg_teleop/share/cg_teleop/: package.sh
install/navegacao/lib/navegacao/: path_planner
install/navegacao/share/ament_index/resource_index/package_run_dependencies/: navegacao
install/navegacao/share/ament_index/resource_index/parent_prefix_path/: navegacao
install/navegacao/share/navegacao/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/navegacao/share/navegacao/cmake/: navegacaoConfig.cmake
install/navegacao/share/navegacao/launch/: mapper.launch.py  path_planner.launch.py
log/: latest_build
src/navegacao/: CMakeLists.txt  package.xml
src/navegacao/include/navegacao/: grid_utils.hpp
src/navegacao/install/: local_setup.sh  setup.sh
src/navegacao/install/navegacao/share/navegacao/: package.bash  package.zsh
src/navegacao/log/: latest_build
src/navegacao/src/: mapper_node.cpp  path_planner_node.cpp
src/ponderada_navegacao/ponderada_navegacao/: CMakeLists.txt  package.xml
src/ponderada_navegacao/ponderada_navegacao/include/ponderada_navegacao/: a_star.hpp  grid_map.hpp
src/ponderada_navegacao/ponderada_navegacao/launch/: mapper.launch.py  pathfinder.launch.py
src/ponderada_navegacao/ponderada_navegacao/src/: mapper.cpp  pathfinder.cpp
