<?xml version="1.0"?>
<package format="3">
  <name>navegacao</name>
  <version>0.0.1</version>
  <description>Pacote simples com um planejador A* e um explorador de labirinto para o simulador Culling Games.</description>
  <maintainer email="student@example.com">Aluno</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>cg_interfaces</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>

