<?xml version="1.0"?>
<package format="3">
  <name>ponderada_navegacao</name>
  <version>0.0.0</version>
  <description>Minha solução da ponderada - navegação e mapeamento (C++).</description>
  <maintainer email="you@example.com">Carol</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>cg_interfaces</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
